--- a/sun/index.html
+++ b/sun/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sun&moon</title>
-    <link rel="stylesheet" href="sun&moon.css">
+   <!-- <link rel="stylesheet" href="sun&moon.css"> -->
 </head>
-<script src="sun.js" async></script>
+<!--<script src="sun.js" async></script>-->
 <body>
-    <div class="sun"></div>
+   <!--
+<div class="sun"></div>
     <div class="moon">
     <div id="snowMask"></div>
     <div class="text">
@@ -17,6 +18,9 @@
     </div>
     </div>
     <div class="sea"></div>
-    
+    -->
+    <p>无数次期待着你的主动</p>
+    <p>手边的缘分却抓不住</p>
+    <p>2021.1.6</p>
 </body>
 </html>
