--- a/sun/index.html
+++ b/sun/index.html
@@ -7,6 +7,16 @@
    <!-- <link rel="stylesheet" href="sun&moon.css"> -->
 </head>
 <!--<script src="sun.js" async></script>-->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?c2adb509564b7d580bea4bb1ba451ee7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <body>
    <!--
 <div class="sun"></div>
