--- a/sun/index.html
+++ b/sun/index.html
@@ -32,8 +32,10 @@ var _hmt = _hmt || [];
     </div>
     <div class="sea"></div>
     -->
-    <p>无数次期待着你的主动</p>
-    <p>手边的缘分却抓不住</p>
-    <p>2021.1.6</p>
+    <p>无数次期待着你主动</p>
+    <p>手边的缘分好想抓住</p>
+    <p>那就</p>
+    <p>让自己变成更好的人</p>
+    <p>2021.1.8</p>
 </body>
 </html>
